# forsyde-devtools

./: .editorconfig  .envrc  .gitignore  404.html  LICENSE  README.md  cabal.project  flake.nix  forsyde-devtools.cabal  hie.yaml  index.html  mkdocs.yml  run.sh  shell.nix  stack.yaml  test_pipeline.sh
.completions/: generate_completions.sh
.completions/forsyde-devtools-exe/: bash  fish  zsh
.completions/forsyde-lsp-exe/: bash  fish  zsh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: chaos-ticket-template.md
.github/workflows/: build.yml  ci.yml  mkdocs.yaml  release.yml
.scripts/: build-compiler-with-nix
c-code-templates/: index.html
chaos/: index.html
contribution/: index.html
core-ir/: index.html
docs/: README.md  c-code-templates.md  chaos.md  contributing.md  contribution.md  core-ir.md  es-labkit-board.md  forsyde-ir.md  ghc-core.md  grammar.md  index.md  lexer.md  parser.md  procedural-ir.md  project-overview.md  scheduling.md  testing.md  user-guide.md  visualisation.md  vscode.md
es-labkit-board/: index.html
examples/atom/: SDF_example_001.hs
examples/implementation/: SDF_example_001.c
examples/implementation/pico2/SDF_example_002/: main.c
examples/implementation/platform_independent/SDF_example_002/: actor_templates.h  common.h  main_platform_independent.c  simulation.md  test.in
examples/implementation/platform_independent/SDF_example_008/: a.out  common.h  main_platform_independent.c  simulation.md
examples/implementation/platform_independent/include/: buffer_blocking_pc.h  buffer_blocking_pico2.h  buffer_nonblocking.h
examples/model/: Delays.hs  SDF_example_001.hs  SDF_example_002.hs  SDF_example_003.hs  SDF_example_004.hs  SDF_example_005.hs  SDF_example_006.hs  SDF_example_007.hs  SDF_example_008.hs  SDF_example_009.hs  SDF_example_010.hs  SDF_example_011.hs  SDF_example_012.hs  SDF_example_013.hs  SDF_example_014.hs  SDF_example_015.hs  SDF_example_016.hs  SDF_example_017.hs  SDF_example_018.hs  SDF_example_019.hs  SDF_example_020.hs  SDF_example_021.hs  SDF_example_022.hs  SDF_example_023.hs  SDF_example_024.hs  SDF_example_025.hs  SDF_example_026.hs  SDF_example_027.hs  SDF_example_028.hs  SDF_example_029.hs  SDF_example_030.hs  SDF_example_031.hs  SDF_example_032.hs  SDF_example_033.hs  SDF_example_034.hs  SDF_example_035.hs
examples/test/: double.hcr  simple.c  simple.fir  simple.hcr  simple.json  simple.pir
examples/test/Scheduler/: schedule1.txt  schedule2.txt  schedule3.txt  schedule4.txt  schedule5.txt  schedule6.txt
forsyde-ir/: index.html
procedural-ir/: index.html
scheduling/: index.html
scripts/: test.sh
src/: Arguments.hs  ArgumentsLSP.hs  ArgumentsMain.hs  CoreIR.hs  CoreIRToForSyDeIR.hs  CoreIRToProceduralIR.hs  CoreToForSyDeIR.hs  ForSyDeIR.hs  ForSyDeIRToProceduralIR.hs  LSP.hs  Main.hs  ProceduralIR.hs  ProceduralIRToC.hs  SDFSchedule.hs  SDF_schedule.hs  SKGraphSchema.hs  Utilities.hs
src/compiler/: dune-project
src/compiler/lib/: dune  lexer.mll  parser.mly
test/: ForSyDeIRSpec.hs  ProceduralIRSpec.hs  ProceduralIRToCSpec.hs  SDFScheduleSpec.hs
testing/: index.html
user-guide/: index.html
visualisation/: index.html
vscode/: index.html
vscode-ext/: .gitignore  .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-ext/client/: package-lock.json  package.json  stack.yaml  tsconfig.json
vscode-ext/client/src/: error-handler.ts  extension.ts
