cabal-version: 3.0
name: forsyde-devtools
version: 0.1.0.0
synopsis: Compiler and visualiser for a subset of ForSyDe-Shallow SDF models
license: MIT
license-file: LICENSE
author: Michel Delli Abo, Samuel Miksits, Klara Modin, Mohammad Afif Ramadhan, Sebastian Thaeron, Zicong Zhang.
maintainer: Sebastian Thaeron <thaeron@kth.se>, Klara Modin <smod@kth.se>
copyright: Copyright (c) 2025-2026 Michel Delli Abo, Samuel Miksits, Klara Modin, Mohammad Afif Ramadhan, Sebastian Thaeron, Zicong Zhang
build-type: Simple
extra-doc-files: README.md

common common-options
  ghc-options:
    -Wall
    -threaded

  default-language: Haskell2010
  build-depends:
    aeson ==2.2.3.0,
    aeson-pretty ==0.8.10,
    base >=4.11 && <4.21,
    bytestring >=0.11 && <0.13,
    co-log-core ==0.3.2.5,
    containers ==0.7,
    filepath >=1 && <1.6,
    forsyde-atom >=0.3.2 && <=0.3.3,
    forsyde-shallow ==3.5.0.0,
    ghc ==9.10.2,
    ghc-paths ==0.1.0.12,
    hmatrix ==0.20.2,
    lsp ==2.7.0.1,
    lsp-types ==2.3.0.1,
    network >=3.2.7 && <3.2.9,
    optparse-applicative >=0.18.1.0,
    prettyprinter ==1.7.1,
    process ==1.6.25.0,
    syb >=0.7.2.4 && <=0.7.3,
    text ==2.1.2,

library
  import: common-options
  hs-source-dirs: src
  exposed-modules:
    ArgumentsMain
    CoreIR
    CoreIRToForSyDeIR
    CoreIRToProceduralIR
    ForSyDeIR
    ForSyDeIRToProceduralIR
    ProceduralIR
    ProceduralIRToC
    SDFSchedule
    Utilities

library examples
  import: common-options
  hs-source-dirs: examples
  visibility: private

executable forsyde-compiler-exe
  import: common-options
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  build-depends: forsyde-devtools
  other-modules:
    ArgumentsMain
    CoreIR
    CoreIRToForSyDeIR
    CoreIRToProceduralIR
    ForSyDeIR
    ForSyDeIRToProceduralIR
    ProceduralIR
    ProceduralIRToC
    SDFSchedule
    Utilities

executable forsyde-lsp-exe
  import: common-options
  hs-source-dirs: src
  main-is: LSP.hs
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  build-depends: forsyde-devtools
  other-modules:
    ArgumentsLSP
    CoreIR
    CoreIRToForSyDeIR
    ForSyDeIR
    ProceduralIR
    SDFSchedule
    SKGraphSchema
    Utilities

test-suite forsyde-devtools-test
  import: common-options
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  ghc-options:
    -rtsopts
    -with-rtsopts=-N

  other-modules:
    ForSyDeIRSpec
    ProceduralIRSpec
    ProceduralIRToCSpec
    SDFScheduleSpec

  build-depends:
    forsyde-devtools,
    hspec,
